erDiagram
    USERS {
        int id PK
        string username
        string hash
        string email
        datetime created_at
    }

    TASKS {
        int id PK
        int user_id FK
        string title
        string description
        string priority
        datetime due_date
        boolean completed
        datetime created_at
        datetime updated_at
    }

    CATEGORIES {
        int id PK
        int user_id FK
        string name
        string color
    }

    TASK_CATEGORIES {
        int task_id FK
        int category_id FK
    }

    USERS ||--o{ TASKS : "creates"
    USERS ||--o{ CATEGORIES : "creates"
    TASKS ||--o{ TASK_CATEGORIES : "belongs to"
    CATEGORIES ||--o{ TASK_CATEGORIES : "contains"